--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,16 @@
 html {
   font-size: 62.5%;
 }
+@media (max-width: 1000px) {
+  html {
+    font-size: 40%;
+  }
+}
+@media (max-width: 620px) {
+  html {
+    font-size: 30%;
+  }
+}
 
 body {
   font-size: 2.4rem;
@@ -49,6 +59,23 @@ h1 {
 h3 {
   margin-right: 1.6rem;
   font-size: 2.4rem;
+}
+
+@media (max-width: 470px) {
+  h1 {
+    font-size: 6.5rem;
+  }
+  .add-form {
+    flex-direction: column;
+  }
+  .add-form h3 {
+    text-align: center;
+  }
+  .add-form select,
+  .add-form input,
+  .add-form button {
+    width: 40%;
+  }
 }
 
 button,
